--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="cta">
                 <h2>Download Now</h2>
                 <p>Available on the App Store for iPhone, iPad, and Apple TV</p>
-                <a href="https://apps.apple.com/app/id0000000000" class="app-store-btn">Download on the App Store</a>
+                <a href="https://apps.apple.com/app/6757228597" class="app-store-btn">Download on the App Store</a>
             </div>
         </div>
 
